--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@types/react": "^16.14.3",
 		"@types/react-dom": "^16.9.10",
 		"i18next": "^19.8.7",
+		"i18next-http-backend": "^1.1.0",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-i18next": "^11.8.5",
