--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,4 +10,7 @@ jobs:
               run: npm ci
 
             - name: Run lint
-              run: npm run lint
+              run: npm run eslint
+
+            - name: Run tsc
+              run: npm run tsc:check
