--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@types/react": "^16.14.5",
 		"@types/react-dom": "^16.9.12",
 		"i18next": "^19.9.1",
+		"i18next-browser-languagedetector": "^6.1.0",
 		"i18next-http-backend": "^1.2.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
